# TP2RAG

./: README.md  main.py  pyproject.toml
